force-app/main/default/objects/sugati__Costing_Variables__c/sugati__Costing_Variables__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-wide settings that affect costing calculations</description>
    <label>Costing Variables</label>
</CustomObject>