force-app/main/default/objects/sugati__Costing_Variables__c/fields/sugati__Add_Agency_Commission_to_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__Add_Agency_Commission_to_Sell_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Agency Commission to Sell Price</label>
    <type>Checkbox</type>
</CustomField>