force-app/main/default/objects/sugati__Costing_Variables__c/fields/sugati__Agency_Commission_Based_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__Agency_Commission_Based_On__c</fullName>
    <description>Is agency commission calculated on Net or Gross Sell? - This setting is only relevant if ”Add Agency Commission to Sell Price” = true.</description>
    <inlineHelpText>Is agency commission calculated on Net or Gross Sell? - This setting is only relevant if ”Add Agency Commission to Sell Price” = true.</inlineHelpText>
    <label>Agency Commission Calculated On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>