force-app/main/default/objects/sugati__Costing_Variables__c/fields/sugati__Agency_is_end_customer__c.field-meta.xml
<CustomField>
    <fullName>sugati__Agency_is_end_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency is end customer</label>
    <type>Checkbox</type>
</CustomField>