force-app/main/default/objects/sugati__Costing_Variables__c/fields/sugati__Margin_Markup_added_to__c.field-meta.xml
<CustomField>
    <fullName>sugati__Margin_Markup_added_to__c</fullName>
    <defaultValue>&quot;Gross Cost&quot;</defaultValue>
    <description>Is the margin or markup added to the Gross Cost or the Net Cost?</description>
    <inlineHelpText>Is the margin or markup added to the Gross Cost or the Net Cost?</inlineHelpText>
    <label>Margin / Markup added to</label>
    <length>20</length>
    <type>Text</type>
</CustomField>