force-app/main/default/objects/sugati__Costing_Variables__c/fields/sugati__Margin_Markup_based_on__c.field-meta.xml
<CustomField>
    <fullName>sugati__Margin_Markup_based_on__c</fullName>
    <defaultValue>&quot;Gross Cost&quot;</defaultValue>
    <description>Is the margin and markup based on the Gross Cost or the Net Cost?</description>
    <inlineHelpText>Is the margin and markup based on the Gross Cost or the Net Cost?</inlineHelpText>
    <label>Margin / Markup based on</label>
    <length>20</length>
    <type>Text</type>
</CustomField>