force-app/main/default/objects/sugati__Costing_Variables__c/fields/sugati__X0_Agent_Commission_on_Cancelled_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__X0_Agent_Commission_on_Cancelled_Booking__c</fullName>
    <defaultValue>true</defaultValue>
    <label>0 Agent Commission on Cancelled Bookings</label>
    <type>Checkbox</type>
</CustomField>